fix z-index

--- a/theme/assets/scss/cart.scss
+++ b/theme/assets/scss/cart.scss
@@ -57,7 +57,7 @@ Mobile
     top: 3.25rem;
     position: fixed;
     width: 90%;
-    z-index: 1002;
+    z-index: 997;
     bottom: 0;
     overflow-y: scroll;
     font-size: 82%;
