--- a/theme/assets/scss/header.scss
+++ b/theme/assets/scss/header.scss
@@ -62,7 +62,7 @@ header {
     left: 0;
     width: 100%;
     height: 3.25rem;
-    z-index: 1003;
+    z-index: 998;
     padding-top: 0;
     border-bottom: none;
     box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.20);
@@ -108,7 +108,7 @@ DESKTOP
   position: absolute;
   width: 100%;
   background-color: #f5f5f5;
-  z-index: 1003;
+  z-index: 998;
   left: 0;
   margin-top: 0.5rem;
   padding: 30px 20px;
@@ -166,7 +166,7 @@ MOBILE
   position: fixed;
   top: 3.25rem;
   width: 90%;
-  z-index: 1002;
+  z-index: 997;
   bottom: 0;
   transition: all 200ms ease-in-out;
 }
@@ -222,7 +222,7 @@ body.search-active .mobile-nav {
   height: 100%;
   top: 0px;
   right: 0px;
-  z-index: 1004;
+  z-index: 999;
   display: block;
   position: absolute;
   background-size: 16px;
