--- a/theme/assets/scss/theme.scss
+++ b/theme/assets/scss/theme.scss
@@ -41,7 +41,7 @@ $ig-blue: #636363 !default;
   top: 3.25rem;
   left: 0;
   height: 100%;
-  z-index: 1001;
+  z-index: 996;
   width: 100%;
 }
 
@@ -76,7 +76,7 @@ hr.separator {
 }
 
 .modal-content {
-  z-index: 1002;
+  z-index: 997;
   margin: 3.25rem 1.5rem 0 1.5rem;
 }
 
